# G4_HPGe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Run.py  environment.yml
analysis/: Analysis.ipynb  Convert.ipynb  Plot.ipynb
analysis/results/: 13C_pg.txt  13C_pg_10_cm.txt  13C_pg_20_cm.txt  13C_pg_3_cm.txt
include/: ActionInitialization.hh  ColdTrap.hh  DetectorConstruction.hh  EnergyHistogram.hh  EventAction.hh  GeometryObject.hh  HPGeDetector.hh  LeadShielding.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorManager.hh  SteppingAction.hh  TargetChamberC12.hh  TargetHolderC12.hh
include/generator/GammaDecayScheme/: GammaDecaySchemeGen.hh
include/generator/PrimaryGun/: PrimaryGunGen.hh
mac/: 13C_pg.mac  14N_pg.mac  27Al_pg.mac  run.mac  vis.mac
src/: ActionInitialization.cc  ColdTrap.cc  DetectorConstruction.cc  EnergyHistogram.cc  EventAction.cc  GeometryObject.cc  HPGeDetector.cc  LeadShielding.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorManager.cc  SteppingAction.cc  TargetChamberC12.cc  TargetHolderC12.cc  main.cc
src/generator/GammaDecayScheme/: GammaDecaySchemeGen.cc
src/generator/NuclideGen/: NuclideGunGen.cc
src/generator/PrimaryGun/: PrimaryGunGen.cc
